# ansible-guacamole

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  playbook.yml  playbook_https.yml  playbook_proxy.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: settings.yml
.github/workflows/: default.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/alpine313/: molecule.yml
molecule/alpine314/: molecule.yml
molecule/centos7/: molecule.yml
molecule/centos8/: molecule.yml
molecule/debian10/: molecule.yml
molecule/debian11/: molecule.yml
molecule/debian8/: molecule.yml
molecule/debian9/: molecule.yml
molecule/default/: molecule.yml
molecule/fedora34/: molecule.yml
molecule/fedora35/: molecule.yml
molecule/rocky8/: molecule.yml
molecule/shared/: converge.yml  playbook.yml
molecule/ubuntu1604/: molecule.yml
molecule/ubuntu1804/: molecule.yml
molecule/ubuntu2004/: molecule.yml
molecule/ubuntu2204/: molecule.yml
molecule/ubuntu2404/: molecule.yml
molecule/vagrant/: molecule.yml
tasks/: client.yml  config.yml  debian.yml  install.yml  ldap.yml  main.yml  redhat.yml  services.yml  set_facts.yml  totp.yml
templates/etc/guacamole/: guacamole.properties.j2  guacd.conf.j2  ldap-servers.yml.j2  user-mapping.xml.j2
templates/etc/tomcat/: server.xml.j2
