[tool.poetry]
name = "ansible-guacamole"
version = "0.1.0"
description = ""
authors = ["Larry Smith Jr. <mrlesmithjr@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
ansible = "8.7.0"
chardet = "^5.2.0"
ansible-compat = "24.10.0"

[tool.poetry.group.dev.dependencies]
ansible-lint = "6.8.7"
black = "^25.11.0"
pylint = "^3.3.9"
molecule = {extras = ["docker"], version = "^6.0.3"}
flake8 = "^7.3.0"
cookiecutter = "^2.6.0"
pre-commit = "^4.3.0"
pyyaml = "^6.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
